<resources>
    <string name="app_name">MusicMoji</string>


    <string name="connect_now">Connect with Spotify</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="instructions">Use the navigation bar to navigate. \n \n
        Server Songs contains some preloaded songs. \n \n
    Your Spotify Playlist contains songs loaded from your recent Spotify playlist history. \n \n
    Settings allows you to change the lyric language. \n \n
    The default is the language of the original song, unless otherwise chosen. \n \n
    Use the Search Icon on the toolbar to search all Spotify songs. \n \n
    Note that when selecting non-English songs, lyric generation may take a couple of minutes. This will only happen the first time a given song is selected.</string>
    <string name="welcome">Welcome to MusicMoji!</string>

<!--    <string name="title">Title</string>-->
<!--    <string name="artist">Artist</string>-->

    <string name="serverSongs">Server Songs</string>
    <string name="your_spotify_playlist">Your Spotify Playlist</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <string name="time">0:00</string>
    <string name="placeholder_title">Title</string>
    <string name="placeholder_artist">Artist</string>
    <string name="placeholder_album">Album</string>
<!--    <string name="placeholder_lyrics">&lt;lyrics></string>-->
    <string name="language">Language</string>
    <string name="languageSettingsText">Which language would you like song lyrics to be displayed in (in addition to original language)?</string>
    <string name="lyrics_placeholder">Generating emojis/translations...\n(this may take a few minutes)</string>
    <string name="translationOrEmoji_unavailable_warning">**There was a problem determining the language of this song**\n**Emojis/translations could not be generated**\n\n</string>
    <string name="lyrics_unavailable">Lyrics unavailable for this song</string>
    <string name="lyrics_retrievedPreviouslyGenerated">Retrieved previously generated lyrics</string>
    <string name="lyrics_cannotDetermineSourceLanguage">(Translation unavailable (translator cannot determine source language)) \n\n</string>
    <string name="Main_authNotRecognized">An Error Has Occurred: Authentication Not Recognized</string>
    <string name="Main_authStopped">Authentication Process Stopped. Please Authenticate with Spotify</string>
    <string name="selected_language">\The Selected Language is: \</string>
    <string name="Language_English">English</string>
    <string name="Language_Spanish">Spanish</string>
    <string name="Language_Portuguese">Portuguese</string>
    <string name="Language_French">French</string>
    <string name="Language_ChineseSimplified">Chinese (Simplified)</string>
    <string name="Language_Original">None (only display original language)</string>
    <string name="Settings_languageSaved">"Language is saved: "</string>
    <string name="Settings_languageUpdated">Language Preference Updated</string>
    <string name="logo">logo</string>
    <string name="MainActivity_authNote">Note:\nAuthentication should only take a few seconds at most.\nIf it takes longer, make sure Spotify is not in offline mode.</string>
    <string name="MainActivity_continueOffline">Continue offline\n(server songs only)</string>
    <string name="SpotifySongFragment_couldnotretrieve">Could not retrieve playlist</string>
    <string name="SearchSongFragment_couldnotretrieve">Could not retrieve search results</string>
    <string name="Lyrics_offlineNotSaved">Lyrics for this song are not yet saved. Songs must be played at least once with an internet connection to save their lyrics.</string>


</resources>
